--- a/2/index.html
+++ b/2/index.html
@@ -6,130 +6,187 @@
     <base href="https://htmlacademy-htmlcss.github.io/565341-gllacy/2/">
 </head>
   <body>
-  	<!-- <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p> -->
-		<header class="main-header wrapper" id="top-header">
-      <nav class="main-header__main-nav main-nav">
-        <a class="main-nav__logo" href="#top-header"><img src="img/Logo.png" width="154" height="64" alt="Магазин мороженного «Gllacy Shop»"></a>
-        <ul class="main-nav__site-nav site-nav">
-          <li class="site-nav__item catalog"><a href="catalog.html">Каталог</a>
-          	<ul class="catalog-list hidden-content">
-          		<li class="catalog-list__item catalog-list__new"><a href="#">Новинки</a></li>
-          		<li class="catalog-list__item"><a href="#">Сливочное</a></li>
-          		<li class="catalog-list__item"><a href="#">Щербеты</a></li>
-          		<li class="catalog-list__item"><a href="#">Фруктовый лед</a></li>
-          		<li class="catalog-list__item"><a href="#">Мелорин</a></li>
-          	</ul>
+    <header class="main-header">
+      <nav class="main-nav">
+        <a class="logo" href="index.html"><img src="img/logo.png" width="154" height="64" alt="Магазин мороженного «Gllacy Shop»"></a>
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="catalog.html">Каталог</a>
+            <ul class="main-nav__sub-list">
+              <li class="sub-list__item sub-list__item_new"><a href="#">Новинки</a></li>
+              <li class="sub-list__item"><a href="#">Сливочное</a></li>
+              <li class="sub-list__item"><a href="#">Щербеты</a></li>
+              <li class="sub-list__item"><a href="#">Фруктовый лед</a></li>
+              <li class="sub-list__item"><a href="#">Мелорин</a></li>
+            </ul>
           </li>
-          <li class="site-nav__item"><a href="#">Доставка и оплата</a></li>
-          <li class="site-nav__item"><a href="#">О Компании</a></li>
+          <li class="main-nav__item"><a href="#">Доставка и оплата</a></li>
+          <li class="main-nav__item"><a href="#">О Компании</a></li>
         </ul>
       </nav>
-      <section class="main-header__inputs inputs">
-      	<h3 class="inputs__hidden hidden-content">Блок ввода данных</h3>
-      	<button class="inputs__btn"></button>
-      	<form class="inputs__form" action="post">
-      		<input class="inputs__form_search" id="main-nav_search" type="search" name="main-nav_search">		
-      	</form>
-      	<ul class="inputs__user-navigation">
-      		<li class="inputs__user-navigation_login">Вход</li>
-      	</ul>
-      	<ul class="inputs__basket">
-      		<li class="inputs__basket_blank">Пусто</li>
-      	</ul>
+      <section class="user-nav">
+        <h3 class="visually-hidden"></h3>
+        <a class="user-nav__search">Поиск</a>
+        <form class="user-nav__form" method="post" action="https://echo.htmlacademy.ru">
+          <label class="visually-hidden" for="user-nav__search">Поиск</label>
+          <input class="form__search" id="user-nav__search" type="search" name="user-nav__search">
+          <input class="visually-hidden" type="submit" value="Искать">
+        </form>
+
+        <div class="login">
+          <a class="user-nav__btn user-nav__btn--login" href="#">Вход</a>
+          <div class="login-form">
+            <form action="https://echo.glassy.ru" method="post" enctype="text/plain">
+              <div class="login-form__container">
+                <input id="login" type="email" name="email" class="login-form__field login-form__field--email" placeholder="Электронная почта" required>
+                <label class="login-form__label" for="login">Электронная почта</label>
+              </div>
+              <div class="login-form__container">
+                <input id="password" type="password" name="password" class="login-form__field login-form__field--password" placeholder="Пароль" required>
+                <label  class="login-form__label" for="password">Пароль</label>
+              </div>
+              <button type="submit" class="btn login-form__btn-enter">Войти</button>
+              <div class="login-form__links">
+                <a href="#">Забыли пароль?</a>
+                <a href="#">Новая регистрация</a>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <a class="user-nav__basket" href="#">2 товара</a>
+        <div class="basket__popup">
+          <table class="table__popup">
+            <tr class="table__row">
+              <td class="table__cell"><button class="close">Убрать</button></td>
+              <td class="table__cell"><img src="img/basket-img-1.jpg" alt="Пломбир с апельсиновым джемом"></td>
+              <td class="table__cell">Пломбир с апельсиновым джемом</td>
+              <td class="table__cell">1,5 кг х 200 руб.</td>
+              <td class="table__cell">300 руб.</td>
+            </tr>
+            <tr class="table__row">
+              <td class="table__cell"><button class="close">Убрать</button></td>
+              <td class="table__cell"><img src="img/basket-img-2.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада"></td>
+              <td class="table__cell">Клубничный пломбир с присыпкой из белого шоколада</td>
+              <td class="table__cell">1,5 кг х 300 руб.</td>
+              <td class="table__cell">450 руб.</td>
+            </tr>
+          </table><hr>
+          <p>Итого: <span>750 руб.</span></p>
+          <a class="btn" href="#">Оформить заказ</a>
+        </div>
       </section>
       <p class="main-header__time">С 10 до 20, ежедневно</p>
       <p class="main-header__number">8 812 450-25-25</p>
-      <section class="main-header__slider slider">
-      	<h3 class="slider__hidden-content">Блок слайдер</h3>
-      	<b>Крем-брюле и пломбир с малиновым джемом</b>
-      	<i class="slider__inner slider__inner_active"></i>
-      	<i class="slider__inner"></i>
-      	<i class="slider__inner"></i>
-      	<button class="slider__btn btn">Давайте оба!</button>
+
+      <section class="main-header__slider">
+        <div class="slides">
+          <div class="slides__item">
+            <h2 class="slides__title">Крем-брюле и пломбир с малиновым джемом</h2>
+            <a class="btn slides__btn" href="#">Давайте оба!</a>
+          </div>
+
+          <div class="slides__item">
+            <h2 class="slides__title">Шоколадный пломбир и лимонный сорбет</h2>
+            <a class="btn slides__btn" href="#">Давайте оба!</a>
+          </div>
+
+          <div class="slides__item">
+            <h2 class="slides__title">Пломбир с помадкой и клубничный щербет</h2>
+            <a class="btn slides__btn" href="#">Давайте оба!</a>
+          </div>
+        </div>
+        <i class="slider__inner slider__inner--active">&bull;</i>
+        <i class="slider__inner">&bull;</i>
+        <i class="slider__inner">&bull;</i>
       </section>
     </header>
+    <main>
+      <section class="banners">
+        <article class="banner banner--raspberry">
+          <h3 class="banner__title">Малинка даром!</h3>
+          <p class="banner__content">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        </article>
+        <article class="banner banner--chocolate">
+          <h3 class="banner__title">Шоколадки даром!</h3>
+          <p class="banner__content">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        </article>
+      </section>
 
-    <section class="banners wrapper">
-    	<article class="banners__raspberry banner">
-    		<b>Малинка даром!</b>
-    		<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-    	</article>
-    	<article class="banners__chocolate banner">
-    		<b>Шоколадки даром!</b>
-    		<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-    	</article>
-    </section>
+      <section class="product">
+        <div class="product__item">
+          <img src="img/icecream-1.jpg" alt="Мороженое сливочное с апельсиновым">
+          <p><b>310 &#8381;</b><span class="small-font">/кг</span></p>
+          <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          <a class="btn" href="#">Быстрый просмотр</a>
+        </div>
+        <div class="product__item">
+          <img src="img/icecream-2.jpg" alt="Мороженое сливочно-кофейное с кусочками шоколада">
+          <p><b>380 &#8381;</b><span class="small-font">/кг</span></p>
+          <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          <a class="btn" href="#">Быстрый просмотр</a>
+        </div>
+        <div class="product__item">
+          <img src="img/icecream-3.jpg" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада">
+          <p><b>355 &#8381;</b><span class="small-font">/кг</span></p>
+          <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          <a class="btn" href="#">Быстрый просмотр</a>
+        </div>
+        <div class="product__item">
+          <img src="img/icecream-4.jpg" alt="Мороженное сливочное крем-брюле с карамельной подливкой">
+          <p><b>415 &#8381;</b><span class="small-font">/кг</span></p>
+          <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          <a class="btn" href="#">Быстрый просмотр</a>
+        </div>
+      </section>
 
-    <section class="hits wrapper">
-    	<ul class="hits__list">
-    		<li class="hits__list_item">
-    			<a href="#">
-    				<img src="img/1.jpg" alt="Мороженое сливочное с апельсиновым">
-    				<b>310&#8381;/кг</b>
-    				<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-    			</a>
-    		</li>
-    		<li class="hits__list_item">
-    			<a href="#">
-    				<img src="img/2.jpg" alt="Мороженое сливочно-кофейное с кусочками шоколада">
-    				<b>380&#8381;/кг</b>
-    				<p>Сливочно-кофейное с кусочками шоколада</p>
-    			</a>
-    		</li>
-    		<li class="hits__list_item">
-    			<a href="#">
-    				<img src="img/3.jpg" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада">
-    				<b>355&#8381;/кг</b>
-    				<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-    			</a>
-    		</li>
-    		<li class="hits__list_item">
-    			<a href="#">
-    				<img src="img/4.jpg" alt="Мороженное сливочное крем-брюле с карамельной подливкой">
-    				<b>415&#8381;/кг</b>
-    				<p>Сливочное крем-брюле с карамельной подливкой</p>
-    			</a>
-    		</li>
-    	</ul>
-    </section>
+      <section class="advantages">
+        <h3 class="advantages__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+        <p class="advantages__item advantages__item--icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+        <p class="advantages__item advantages__item--eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
+        <p class="advantages__item advantages__item--cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+        <p class="advantages__item advantages__item--thermopak">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+      </section>
 
-    <section class="advantages wrapper">
-    	<p class="advantages__item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-    	<p class="advantages__item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
-    	<p class="advantages__item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-    	<p class="advantages__item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-    </section>
-
-    <section class="news-box wrapper">
-    	<article class="news-box__blog">
-    		<p class="">Новое в нашем блоге</p>
-    		<b>10 способов сервировки фруктовых щербетов к столу</b>
-    	</article>
-    	<!-- Сдесь будет form-->
-    </section>
-    <section class="maps">
-    	<div class="maps__address">
-    		<p>Адрес главного офиса и офлайн-магазина:</p>
-    		<b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
-    		<p>Для заказов по телефону:</p>
-    		<p>8 812 450-25-25</p>
-    		<p>(с 10 до 20 ежедневно)</p>
-    		<button class="maps__address_btn btn">Форма обратной связи</button>
-    	</div>
+      <section class="group-box">
+        <article class="news">
+          <h4 class="news__title">Новое в нашем блоге</h4>
+          <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+        </article>
+        <article class="subscribe">
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form action="https://echo.htmlacademy.ru" method="post">
+            <label class="visually-hidden" for="subscribe-email"></label>
+            <input class="subscribe__mail" type="email" name="email" id="subscribe-email">
+            <button class="btn subscribe__btn"></button>
+          </form>
+        </article>
+      </section>
+    </main>
+    <section class="map">
+      <div class="contacts">
+        <p class="contacts__address">Адрес главного офиса и офлайн-магазина:<b class="text-bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
+        <p class="contacts__tel">Для заказов по телефону:<b class="text-bold">8 812 450-25-25</b>(с 10 до 20 ежедневно)</p>
+        <a href="#" class="btn contacts__btn">Форма обратной связи</a>
+      </div>
     </section>
 
     <footer class="main-footer">
-    	<div class="main-footer__social"></div>
-			<ul class="main-footer__social_list social">
-				<li class="social__item"><a href="#">Для поставщиков</a></li>
-				<li class="social__item"><a href="#">О производстве</a></li>
-				<li class="social__item"><a href="#">Наши документы</a></li>
-				<li class="social__item"><a href="#">Экологические стандарты</a></li>
-			</ul>
-			<div class="main-footer__copyright">
-				<a href="https://htmlacademy.ru"><img src="logo-htmlacademy-small.png" alt="logo-htmlacademy"></a>
-				<p>Сделано в HTML Academy	&copy; 2017</p>
-			</div>
+      <div class="social">
+        <a class="social__item" href="#">TW</a>
+        <a class="social__item" href="#">Inst</a>
+        <a class="social__item" href="#">FB</a>
+        <a class="social__item" href="#">VK</a>
+      </div>
+      <ul class="main-footer__menu">
+        <li class="footer-menu__item footer-menu__item--heart"><a href="#">Для поставщиков</a></li>
+        <li class="footer-menu__item"><a href="#">О производстве</a></li>
+        <li class="footer-menu__item"><a href="#">Наши документы</a></li>
+        <li class="footer-menu__item"><a href="#">Экологические стандарты</a></li>
+      </ul>
+      <div class="main-footer__copyright">
+        <a href="https://htmlacademy.ru" target="_blank">htmlacademy</a>
+        <p>Сделано в HTML Academy &copy; 2017</p>
+      </div>
     </footer>
   </body>
 </html>
